apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'kotlin-allopen'
//apply plugin: 'kotlin-android-extensions'
apply plugin: 'realm-android'
apply plugin: "net.ltgt.errorprone"

android {
    compileSdkVersion 27
    buildToolsVersion "27.0.3"
    defaultConfig {
        minSdkVersion 17
        targetSdkVersion 27
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "com.zeyad.usecases.integration.AndroidRobolectricRunner"
    }

    buildTypes {
        debug {
            debuggable true
//            consumerProguardFiles 'proguard-project.txt'
        }
        release {
//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lintOptions {
        //lint rules of conduct
        warningsAsErrors true
        abortOnError false
        htmlReport true
        //locations for the rules and output
        lintConfig file("$project.rootDir/tools/rules-lint.xml")
        htmlOutput file("${buildDir}/reports/lint/lint.html")
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.includeAndroidResources = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        incremental false
    }

    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/rxjava.properties'
    }

    sourceSets {
        main {
            assets.srcDirs = ['src/main/assets', 'src/main/java/com/zeyad/usecases/assets', 'src/test/java/com/zeyad/usecases/assets']
        }
    }

//    androidExtensions {
//        experimental = true
//    }

    allOpen {
        annotation("com.zeyad.usecases.Mockable")
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    //Job Dispatcher
    implementation 'com.firebase:firebase-jobdispatcher:0.7.0'
    // Network
    implementation "com.squareup.retrofit2:retrofit:$retrofit"
    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
    implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
    implementation "com.android.support:support-annotations:$supportLibrary"
    // Rx
    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
    api 'io.reactivex.rxjava2:rxjava:2.2.0'
    implementation 'com.jakewharton.rx2:replaying-share-kotlin:2.0.1'
    testImplementation 'io.reactivex:rxandroid:1.2.1'
    // Cache
    implementation('com.github.Zeyad-37:Storo:2.1.0') {
        transitive = true
    }
    implementation 'com.rollbar:rollbar-android:0.2.1'
    implementation "nl.littlerobots.rxlint:rxlint:$rxlint"
    // Testing
    testImplementation 'junit:junit:4.12'
    testImplementation "com.android.support:support-annotations:$supportLibrary"
    testImplementation "org.mockito:mockito-core:$mockito"
    testImplementation "org.robolectric:robolectric:$robolectric"
//    testImplementation "org.robolectric:shadows-support-v4:$robolectric"

    testImplementation "org.powermock:powermock-module-junit4:$powerMock"
    testImplementation "org.powermock:powermock-module-junit4-rule:$powerMock"
    testImplementation "org.powermock:powermock-api-mockito:$powerMock"
    testImplementation "org.powermock:powermock-classloading-xstream:$powerMock"

//    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
    testImplementation 'com.github.andrzejchm.RESTMock:android:0.2.2'
    //required to resolve robolectric test problems
    testImplementation("com.jakewharton.espresso:okhttp3-idling-resource:$okhttpIdelingResource") {
        exclude group: 'com.android.support'
    }
}

//apply from: "$project.rootDir/tools/script-git-version.gradle"
apply from: "$project.rootDir/tools/script-findbugs.gradle"
repositories {
    mavenCentral()
}
//apply from: "$project.rootDir/tools/script-pmd.gradle"
//apply from: "$project.rootDir/tools/script-java-code-coverage.gradle"
//apply from: "$project.rootDir/tools/script-infer.gradle"
//apply from: "$project.rootDir/tools/script-check-style.gradle"
